2006-04-23  Matthieu Herrb <matthieu.herrb@laas.fr>
	* hw/xfree86/dummylib/xalloc.c
	* hw/xfree86/loader/loader.c\
	Don't access free memory after unloading a module.
	Bugzilla #4168.
	
2006-04-22  Benjamin Herrenschmidt  <benh@kernel.crashing.org> 

	* hw/xfree86/os-support/linux/lnx_KbdMap.c:
	When reading the kernel keyboard mapping (readKernelMapping in
	os-support/linux/lnx_KbdMap.c) we overrun the usefully-named global array
	'map', scribbling on other random static variables elsewhere. This
	is fixed by changing the size of at2lnx. (David Woodhouse). Bug #5169

2006-04-19  Keith Packard  <keithp@keithp.com>

	* fb/fbcompose.c: (fbFetch_x4a4), (fetchProcForPicture),
	(fbStore_x4a4), (storeProcForPicture):
	* render/picture.c: (PictureCreateDefaultFormats):
	* render/picture.h:
	Add support for x4a4 format (depth 4 at 8bpp). Bug #6325.

2006-04-18  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaDriverInit):
	* exa/exa_migration.c: (exaPixmapIsDirty), (exaPixmapShouldBeInFB),
	(exaDoMigration):
	* exa/exa_priv.h:
	* hw/kdrive/ephyr/ephyr_draw.c: (exaDDXDriverInit):
	* hw/xfree86/exa/examodule.c: (exaDDXDriverInit):
	Add a new migration scheme, called "Smart" for lack of a better name.
	This one behaves somewhat between Greedy and Always.  It moves in if we
	can accelerate, unless the destination is clean and shouldn't be kept in
	framebuffer according to the score, in which case we migrate out (and
	force-migrate anything where migration is free).  This should help fix
	lack of acceleration for drivers without UTS since removing
	exaAsyncPixmapGCOps, and has removed one performance trap with Radeon
	I'd noticed.  It is the new default.

2006-04-18  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_unaccel.c: (ExaCheckPolyGlyphBlt),
	(exaGetPixmapFirstPixel):
	Fix exaGetPixmapFirstPixel to migrate as unaccelerated.  Also adds a bit
	of fallback debugging info to PolyGlyphBlt.

2006-04-18  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Alan Coopersmith
